bugs fixed in experiments

--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.html
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.html
@@ -27,11 +27,7 @@
     <perfect-scrollbar class="p-scroll-data">
       <div class="table-data-content">
         <div class="row m-0 header-data col-12"  *ngIf='filterExperiments.length>0'>
-          <div class="col-3 h-title d-flex align-items-center" (click)="sortBy('name')">
-            <span class="d-flex align-items-center flex-column mr-1">
-              <img [ngClass]="getSortIconVisibility('name', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
-              <img [ngClass]="getSortIconVisibility('name', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
-            </span>
+          <div class="col-3 h-title d-flex align-items-center">
             Experiment Name</div>
           <div class="col-3 h-title">
             Variants</div>
@@ -58,11 +54,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3 h-title d-flex align-items-center" (click)="sortBy('duration')">
-            <span class="d-flex align-items-center flex-column mr-1">
-              <img [ngClass]="getSortIconVisibility('duration', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
-              <img [ngClass]="getSortIconVisibility('duration', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
-            </span>
+          <div class="col-3 h-title d-flex align-items-center">  
             DURATION</div>
         </div>
         <div id="accordion">
