--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -540,10 +540,10 @@
                     <div class="kr-sg-dropdowns">
                       <div class="dropdown dropdown-open">
                         <button class="dropdown-toggle dropdown-input"
-                          data-toggle="dropdown">{{allowUrl.condition}}</button>
+                          data-toggle="dropdown">{{allowUrl.name}}</button>
                         <ul class="dropdown-menu content-menu">
-                          <li (click)="urlCondition('is' , 'allow')"><a>Is</a></li>
-                          <li (click)="urlCondition('isNot', 'allow')"><a>Is not</a></li>
+                          <li (click)="urlCondition('is' , 'allow')"><a>Equals to</a></li>
+                          <li (click)="urlCondition('isNot', 'allow')"><a>Not equals to</a></li>
                           <li (click)="urlCondition('beginsWith', 'allow')"><a>Begins with</a></li>
                           <li (click)="urlCondition('endsWith', 'allow')"><a>Ends with</a></li>
                           <li (click)="urlCondition('contains', 'allow')"><a>Contains</a></li>
@@ -593,10 +593,10 @@
                     <div class="kr-sg-dropdowns">
                       <div class="dropdown dropdown-open">
                         <button class="dropdown-toggle dropdown-input"
-                          data-toggle="dropdown">{{blockUrl.condition}}</button>
+                          data-toggle="dropdown">{{blockUrl.name}}</button>
                         <ul class="dropdown-menu content-menu">
-                          <li (click)="urlCondition('is' , 'block')"><a>Is</a></li>
-                          <li (click)="urlCondition('isNot', 'block')"><a>Is not</a></li>
+                          <li (click)="urlCondition('is' , 'block')"><a>Equals to</a></li>
+                          <li (click)="urlCondition('isNot', 'block')"><a>Not equals to</a></li>
                           <li (click)="urlCondition('beginsWith', 'block')"><a>Begins with</a></li>
                           <li (click)="urlCondition('endsWith', 'block')"><a>Ends with</a></li>
                           <li (click)="urlCondition('contains', 'block')"><a>Contains</a></li>
