--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -58,7 +58,7 @@
         </div>
         <div class="message-success text-center"
           *ngIf="(statusObject && statusObject.validation && statusObject.validation.validated) && !((statusObject.status==='success') || (statusObject.status==='failed'))">
-          {{(statusObject.validation.urlValidation && statusObject.validation.validated)?'Successfully Configured':'Configuration In Progress'}}
+          {{(statusObject.validation.urlValidation && statusObject.validation.validated)?'Successfully Configured':'Validation In Progress'}}
         </div>
         <div class="message-success text-center" *ngIf="(statusObject.status==='success')">
           Source added Successfully
@@ -111,7 +111,7 @@
         <button type="button" class="kr-sg-button-primary btn_lg float-none ml-2 mr-0" data-dismiss="modal" [disabled]="crawlOkDisable"
           (click)="closeStatusModal()">Ok</button>
           <button type="button" class="kr-sg-button-secondary btn_lg float-none ml-2 mr-0" [ngClass]="{'d-none': statusObject.status==='success'}" data-dismiss="modal"
-          (click)="stopCrwaling()">Stop Crawling</button>
+          (click)="stopCrwaling()">Cancel Crawling</button>
          </div>
     </div>
   </div>
