--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -111,9 +111,9 @@
                 <div class="col-3 content">
                     <ng-container *ngFor="let outcome of ruleObj.outcomes">
                         <span class="tags-input mr-1 mb-1"><span *ngIf=" outcome.outcomeType === 'boost' ||  outcome.outcomeType === 'lower'">{{ outcome.scale }}x </span> {{"businessRules.action" + outcome.outcomeType | translate}}
-                        </span>
+                        </span><br/>
                         <span class="outer-name mr-1 mb-1">{{"businessRules." + outcome.outcomeOperator | translate }}</span>
-                        <span class="tags-input mr-1 mb-1">{{ "businessRules." + outcome.outcomeType | translate }}:
+                        <span class="tags-input mr-1 mb-1">{{ outcome.fieldName }}:
               <span *ngFor="let value of outcome.outcomeValue;let valueIndex = index">{{ value }}
                 <span *ngIf="valueIndex < outcome.outcomeValue.length - 1" class="divider mr-1 mb-1">{{ "or_caps" | translate }}</span>
                         </span>
