--- a/findly-builder/src/app/components/field-management/field-management.component.scss
+++ b/findly-builder/src/app/components/field-management/field-management.component.scss
@@ -194,7 +194,7 @@
     position: relative;
     top: -1px;
 }
-::ng-deep perfect-scrollbar .ps--active-y{
+perfect-scrollbar .ps--active-y{
     padding-bottom: 85px;
 }
 
