--- a/findly-builder/src/app/components/search-insights/search-insights.component.scss
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.scss
@@ -208,9 +208,9 @@
         &:hover{
             background: #F8F9FA;
             transition: 0.3s all ease-in;
-            .count{
-                display: none;
-            }
+            // .count{
+            //     display: none;
+            // }
             .view-query{                            
                 display: inline-block;                                                     
             }
