--- a/findly-builder/src/app/components/result-insights/result-insights.component.scss
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.scss
@@ -192,9 +192,9 @@
         &:hover{
             background: #F8F9FA;
             transition: 0.3s all ease-in;
-            .count{
-                display: none;
-            }
+            // .count{
+            //     display: none;
+            // }
             .view-query{                            
                 display: inline-block;                                                     
             }
