--- a/findly-builder/src/app/components/search-insights/search-insights.component.html
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.html
@@ -61,7 +61,7 @@
                                 <div class="table_body row m-0" *ngFor="let result of getQueriesWithResults | filter: [ searchSources , 'query']">                                
                                     <div class="col-8 title">{{result.query}}</div>
                                     <div class="col-2 title">{{result.searches}}</div>                                                         
-                                    <div class="col-2 title">
+                                    <div class="col-2 title d-flex align-items-center justify-content-between">
                                         <span class="count">{{result.clicks}}</span>
                                         <div class="view-query" (click)="openModalPopup(result)">
                                             <img src="assets/icons/view-query.svg">    
