--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -47,7 +47,7 @@
                     <div class="desc-text"> Rule is powerful tool to personalize and fine-tune search results. SearchAssist allows you to define rules based on Search , Page and User-contexts. Rules can also be used for merchandising and promotions.
                     </div>
                     <div class="kr-sg-dropdowns" ngbDropdown [container]="'body'">
-                        <button class="kr-sg-button-primary" (click)="createNewRule()">Add Rules</button>
+                        <button class="kr-sg-button-primary btn_lg px-3" (click)="createNewRule()">Add Rules</button>
                     </div>
                 </ng-container>
                 <ng-container *ngIf="noItems && emptySearchResults">
