--- a/findly-builder/src/app/components/synonyms/synonyms.component.html
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.html
@@ -101,7 +101,7 @@
             </div>
             <div class="kr-sg-dropdowns" ngbDropdown [container]="'body'">                                         
                
-              <button class="kr-sg-button-primary" (click)='enableAddNewSynonymBtn()'> Add Synonyms</button>                                            
+              <button class="kr-sg-button-primary btn_lg px-2" (click)='enableAddNewSynonymBtn()'> Add Synonyms</button>                                            
             </div>
         </ng-container>
         <ng-container *ngIf="noItems && emptySearchResults">
