--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -69,13 +69,12 @@
         <ng-container *ngIf="statusObject && statusObject.validation && !(statusObject.status==='failed')">
           <div class="status-identification-content"
             *ngIf="!((statusObject.status==='success') || (statusObject.status==='failed'))">
-            <div class="content-title" *ngIf="selectedSourceType && (selectedSourceType.resourceType === 'webdomain')">
+            <!-- <div class="content-title" *ngIf="selectedSourceType && (selectedSourceType.resourceType === 'webdomain')">
               <img src="assets/images/source-icos/inprogress-blue.svg" *ngIf="!statusObject.validation.urlValidation">
               <img *ngIf="statusObject.validation.urlValidation" src="assets/images/source-icos/check-green.svg"
                 class="successfullyConnected">
               <span>Initial URL validation</span>
-              <!--<span *ngIf="statusObject.validation.urlValidation">done</span> -->
-            </div>
+            </div> -->
             <div class="content-title" *ngIf="selectedSourceType && (selectedSourceType.resourceType === 'document')">
               <img src="assets/images/source-icos/check-green.svg" class="successfullyConnected">
               <span>Initial file validation </span> <!--  <span >done</span> -->
